feat: update button background color

--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #576d7e;
+  background-color: #648dac;
   margin: 10px;
   border-right: solid 5px rgba(0, 0, 0, 0.2);
   border-bottom: solid 5px rgba(0, 0, 0, 0.2);
